--- a/resources/public/css/screen.css
+++ b/resources/public/css/screen.css
@@ -1,23 +1,25 @@
 html,
 body {
-	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 @font-face {
-  font-family: 'Material Icons';
+  font-family: "Material Icons";
   font-style: normal;
   font-weight: 400;
   src: url(/assets/material-icons/iconfont/MaterialIcons-Regular.eot); /* For IE6-8 */
-  src: local('Material Icons'),
-       local('MaterialIcons-Regular'),
-       url(/assets/material-icons/iconfont/MaterialIcons-Regular.woff2) format('woff2'),
-       url(/assets/material-icons/iconfont/MaterialIcons-Regular.woff) format('woff'),
-       url(/assets/material-icons/iconfont/MaterialIcons-Regular.ttf) format('truetype');
+  src: local("Material Icons"), local("MaterialIcons-Regular"),
+    url(/assets/material-icons/iconfont/MaterialIcons-Regular.woff2)
+      format("woff2"),
+    url(/assets/material-icons/iconfont/MaterialIcons-Regular.woff)
+      format("woff"),
+    url(/assets/material-icons/iconfont/MaterialIcons-Regular.ttf)
+      format("truetype");
 }
 .material-icons {
-  font-family: 'Material Icons';
+  font-family: "Material Icons";
   font-weight: normal;
   font-style: normal;
-  font-size: 24px;  /* Preferred icon size */
+  font-size: 24px; /* Preferred icon size */
   display: inline-block;
   line-height: 1;
   text-transform: none;
@@ -33,3 +35,20 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+ul.messages {
+  list-style: none;
+}
+
+ul.messages li {
+  padding: 0.5em;
+  border-bottom: 1px dotted #ddddee;
+}
+
+ul.messages li:last-child {
+  border-bottom: none;
+}
+
+li time {
+    font-size: 0.75em;
+    color: rgb(0,196,167);
+}
